[package]
name = "sk6812"
version = "0.1.0"
edition = "2021"
keywords = ["embedded-hal-driver", "async", "led"]
repository = "https://github.com/systemscape/sk6812-rs-async"
rust-version = "1.68"

[dependencies]
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
embedded-hal = "1.0.0-alpha.9"
smart-leds = "0.3"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
embedded-hal-mock = { git = "https://github.com/dbrgn/embedded-hal-mock.git", branch = "1-alpha", features = [
    "embedded-hal-async",
] }
tokio = { version = "1.21.1", features = ["rt", "macros"] }

[features]
default = ["async", "blocking"]
defmt = ["dep:defmt"]
async = ["dep:embedded-hal-async"]
blocking = []
