[package]
name = "sk6812-esp32c3-example"
version = "0.1.0"
authors = ["julidi"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
#panic = "abort"
lto = "thin"
#codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]


[dependencies]
embassy-time = { version = "0.1", features = ["unstable-traits", "nightly", "tick-hz-16_000_000"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { version = "1.0.0-alpha.9", package = "embedded-hal" }
embedded-hal-async = { version = "0.2.0-alpha.0" }
esp32c3-hal = { version = "0.8", features = ["async", "embassy", "embassy-time-systick"]}

#critical-section = "1.1.1"
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = [
    "nightly",
    "integrated-timers",
] }

esp-backtrace = { version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

esp-println = { version = "0.4.0", features = ["esp32c3"] }

static_cell       = "1.0.0"

sk6812 = { path = "../../" }

#smart-leds-trait = { version = "0.2" }

# Do not log on trace, this only causes problems... :/
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
