[package]
name = "sk6812-esp32c3-example"
version = "0.1.0"
authors = ["julidi"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
lto = "thin"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]


[dependencies]
esp-riscv-rt = "*"
embassy-time = { version = "0.1", features = [
    "unstable-traits",
    "nightly",
    "tick-hz-16_000_000",
] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { version = "1.0.0-alpha.9", package = "embedded-hal" }
embedded-hal-async = { version = "0.2.0-alpha.1" }
esp32c3-hal = { version = "0.9", features = [
    "async",
    "embassy",
    "embassy-time-systick",
] }

embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = [
    "nightly",
    "integrated-timers",
] }

esp-backtrace = { version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

esp-println = { version = "0.4.0", features = ["esp32c3"] }

static_cell = "1.0.0"

sk6812 = { path = "../../" }


[build-dependencies]
embuild = "0.28"
anyhow = "1"
