[package]
name = "stm32l4-example"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.1", features = ["nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-2_000_000", "unstable-traits", "nightly"] }
embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "unstable-pac", "stm32l432kc", "time-driver-any", "exti", "unstable-traits"]  }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.10" }
embedded-hal-async = { version = "=0.2.0-alpha.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
#heapless = { version = "0.7.5", default-features = false }

sk6812 = { path = "../../" }

[replace]
"embassy-stm32:0.1.0" = { path = "../../../embassy/embassy-stm32" }


[profile.dev]
debug = 2
opt-level = 0
